[package]
name = "web_server"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap="~2.27.0"
chrono = "0.4"
mysql = "*"
mio = {version="0.8",features=["os-poll","net","os-ext"]}
socket2 ={version="*",features=["all"]}
libc = "0.2"
once_cell = "1.8.0"
nix = "0.23.0"
